crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__id_4.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: parsed
---
language: eng
corpus: Lyon
speaker: FAF
age: ""
sex: ""
group: ""
ses: ""
role: Female
education: ""
custom_field: Female_Adult_Far
