crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__languages_4.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result
---
codes:
  - deu
