crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_2.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: NON
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00152160_3110\u0015"
      start_time: "2160"
      end_time: "3110"
      skip: false
